--- a/parts/CDVO.tex
+++ b/parts/CDVO.tex
@@ -1001,7 +1001,7 @@
 	\end{definition}
 	\begin{proposition}
 		\label{prop:finor, desigualtats i sumes}\label{prop:Particions supremes > ínfimes}
-		Siguin \(P,Q\) dues particions d'un rectangle \(\mathfrak{R}\subset\mathbb{R}^{d}\) i \(f\colon\mathfrak{R}\to\mathbb{R}\) una funció acotada. Aleshores, si \(Q\) és més fina que \(P\)
+		Siguin \(P\) i \(Q\) dues particions d'un rectangle \(\mathfrak{R}\subset\mathbb{R}^{d}\) i \(f\colon\mathfrak{R}\to\mathbb{R}\) una funció acotada. Aleshores, si \(Q\) és més fina que \(P\)
 		\[\sinf(f,P)\leq\sinf(f,Q)\quad\text{i}\quad\Ssup(f,Q)\leq\Ssup(f,P).\]
 		\begin{proof}
 			Demostrarem només la primera desigualtat, ja que la segona té una demostració anàloga. Comencem notant que podem fer la demostració suposant \(P=P_{1}\times\dots\times P_{d}\), on \(P_{i}=t_{i,0}<\dots<t_{i,n}\) és una partició de \([a_{i},b_{i}]\) i \(Q=Q_{1}\times\dots\times Q_{d}\), on, per a tot \(j\in\{1,\dots,d\}\smallsetminus k\), \(P_{j}=Q_{j}\), i \(Q_{k}=t_{k,0}<\dots<t_{k,l}<q<t_{k,l+1}<\dots<t_{k,n}\), per algun \(l\in\{0,\dots,n-1\}\). Suposarem \(l=0,k=1\) per simplificar la notació.
