--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -876,8 +876,7 @@
 		\end{proof}
 	\end{proposition}
 	\begin{definition}[Òrbita d'un element d'un \(G\)-conjunt]
-		\labelname{l'òrbita d'un element d'un $G$-conjunt}
-		\label{def:òrbita d'un element d'un G-conjunt}
+		\labelname{l'òrbita d'un element d'un $G$-conjunt}\label{def:òrbita d'un element d'un G-conjunt}
 		Siguin \(G\) un grup amb l'operació \(\ast\), \(\cdot\) una acció de \(G\) sobre un conjunt \(X\) i \(\sim\) una relació d'equivalència sobre \(X\) tal que per a tot \(x_{1},x_{2}\in X\) diem que \(x_{1}\sim x_{2}\) si i només si existeix un \(g\in G\) tal que \(x_{1}=g\cdot x_{2}\). Aleshores direm que \(\mathcal{O}(x)=[x]\) és l'òrbita de \(x\).
 		
 		Aquesta definició té sentit per la proposició \myref{prop:relacio d'òrbites és d'equivalència}.
@@ -2488,3 +2487,5 @@
 	
 	La bibliografia del curs inclou els textos \cite{AntoineRosaCampsMoncasiIntroduccioAlgebraAbstracta,CedoAlgebraBasica,CohnBasicAlgebra,NumerosGruposyAnillos,FelixConcepcionSebastianIntroduccionAlAlgebra,FraleighFirstCourseAbstractAlgebra,HungerfordAlgebra}.
 \end{document}
+
+% Teorema d'òrbita-estabilitzador i lema de Burnside
