--- a/parts/MN.tex
+++ b/parts/MN.tex
@@ -42,7 +42,7 @@
 	\end{definition}
 	\begin{definition}[Polinomis bàsics de Lagrange]
 		\labelname{problema polinomis bàsics de Lagrange}\label{def:problema polinomis bàsics de Lagrange}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x;a_{0},\dots,a_{n})\) on, per a cert \(k\in\{0,\dots,n\}\) fix tenim que \(y_{k}=1\) i per a tot \(i\in I=\{0,\dots,k-1,k+1,\dots,n\}\) tenim \(y_{i}=0\). Aleshores direm que els polinomis
+		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x;a_{0},\dots,a_{n})\in\mathbb{R}_{n}[x]\) on, per a cert \(k\in\{0,\dots,n\}\) fix tenim que \(y_{k}=1\) i per a tot \(i\in I=\{0,\dots,k-1,k+1,\dots,n\}\) tenim \(y_{i}=0\). Aleshores direm que els polinomis
 		\[L_{k}(x)=\prod_{i\in I}\frac{x-x_{i}}{x_{k}-x_{i}}=\frac{(x-x_{0})\cdots(x-x_{k-1})(x-x_{k+1})\cdots(x-x_{n})}{(x_{k}-x_{0})\cdots(x_{k}-x_{k-1})(x_{k}-x_{k+1})\cdots(x_{k}-x_{n})}\]
 		són polinomis bàsics de Lagrange.
 	\end{definition}
